--- a/SuccinctDeBruijnGraph.cabal
+++ b/SuccinctDeBruijnGraph.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.24
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 97e42d232ccd52e6040d0dd5376cec355c2fdef81449c66394a0a16fef517d06
+-- hash: d0c7f8f4b337d547751c177183f685050521594adfb342f2723b4db8aaf18685
 
 name:           SuccinctDeBruijnGraph
 version:        0.1.0.0
@@ -21,7 +21,7 @@ extra-source-files:
 custom-setup
   setup-depends:
       Cabal
-    , base
+    , base >=4.7 && <5
     , cabal-doctest >=1.0.2 && <1.1
     , containers
     , hashmap
@@ -41,8 +41,10 @@ library
       base >=4.7 && <5
     , containers
     , doctest
+    , fasta
     , hashmap
     , split
+    , text
     , vector
   default-language: Haskell2010
 
@@ -58,8 +60,10 @@ executable SuccinctDeBruijnGraph-exe
     , base >=4.7 && <5
     , containers
     , doctest
+    , fasta
     , hashmap
     , split
+    , text
     , vector
   default-language: Haskell2010
 
@@ -75,9 +79,11 @@ test-suite doctests
     , base
     , containers
     , doctest
+    , fasta
     , hashmap
     , split
     , template-haskell
+    , text
     , vector
   default-language: Haskell2010
 
@@ -98,9 +104,11 @@ test-suite spec
     , base >=4.7 && <5
     , containers
     , doctest
+    , fasta
     , hashmap
     , hspec
     , hspec-core
     , split
+    , text
     , vector
   default-language: Haskell2010
