Start working on Dense Array

--- a/SuccinctDeBruijnGraph.cabal
+++ b/SuccinctDeBruijnGraph.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.24
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 407f09caff6821a339394d440ee546517fa39ef1fce27719ece9eb4b65803148
+-- hash: 40c1a2700ff39be6310d2650faa9ca1976a8b61a6119027679ede14f9307c096
 
 name:           SuccinctDeBruijnGraph
 version:        0.1.0.0
@@ -110,10 +110,11 @@ test-suite spec
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Data.BitArray.SDArraySpec
-      Data.BitArray.VectorBitArraySpec
+      Data.DNA.AssemblySpec
       Data.Graph.Algorithms.EulerianWalkSpec
       Data.Graph.DeBruijnGraphSpec
+      Data.RankSelectArray.SDArraySpec
+      Data.RankSelectArray.VectorBitArraySpec
       Data.Sequence.DNASpec
       Paths_SuccinctDeBruijnGraph
   hs-source-dirs:
