Add class tests for RankSelectArray

--- a/SuccinctDeBruijnGraph.cabal
+++ b/SuccinctDeBruijnGraph.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.24
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 98f0b0683deea8f80efab33a29057f7324b0b77fea51caed90df8783e0994b92
+-- hash: 1fa0df9e3ca1557888c4cf2026b285a17765201b7ded39e60831f630351ee8a3
 
 name:           SuccinctDeBruijnGraph
 version:        0.1.0.0
@@ -112,6 +112,7 @@ test-suite spec
   other-modules:
       Data.Graph.Algorithms.EulerianWalkSpec
       Data.Graph.DeBruijnGraphSpec
+      Data.RankSelectArray.ClassSpecGenerator
       Data.RankSelectArray.SDArraySpec
       Data.RankSelectArray.VectorBitArraySpec
       Data.Sequence.DNASpec
